<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="facebook_app_id">713170092123951</string>
    <string name="app_name">StampDesign</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="select_a_picture">Choose a Photo</string>
    <string name="next_step">NEXT:CHOOSE A RATE</string>
    <string name="view_card">VIEW CARD</string>
    <string name="next_review">NEXT: REVIEW</string>
    <string name="review_title">Review</string>
    <string name="post_card">post card</string>
    <string name="select_letter">1st class letter</string>
    <string name="select_more">more</string>
    <string name="title_activity_show_fbimage">ShowFBImageActivity</string>
    <string name="save_design">Save Design</string>
    <string name="share_design">Share Design</string>
    <string name="item_addto_chart">Item Added to Cart</string>
    <string name="shop_custom">customize</string>
    <string name="shop_addto_chart">add to cart</string>
    <string name="shop_skipto_chart">Skip to cart</string>
    <string name="shop_text_bundle">Make a Bundle. Save $10!</string>
    <string name="shop_cartitems_title">Cart</string>
    <string name="shop_cartitems_totalmoney">Sub-total:</string>
    <string name="shop_cartitems_addmore">Add More items</string>
    <string name="shop_cartitems_coupon">Coupon Code:</string>
    <string name="shop_checkout">Check out</string>
    <string name="shop_cartitems_getcoupon">No coupon Code? Get One Here</string>
    <string name="confirmation_email">CONFIRMATION EMAIL</string>
    <string name="email_confirmed">Email</string>
    <string name="next">next</string>
    <string name="customize_title">Customize</string>
    <string name="header_previous">back</string>
    <string name="shipping_title_1">(1/2) Shipping</string>
    <string name="shipping_title_2">(2/2) Review</string>
    <string name="secure_payment">Secure Payment</string>
    <string name="pay">PAY $</string>
    <string name="text_shipping_address">shipping address</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="address_city">City</string>
    <string name="address_state">State</string>
    <string name="address_zip">Zip</string>
    <string name="text_shipping_method">Shipping method</string>
    <string name="text_shipping_policy">policy</string>
    <string name="shipping_method_standard">Standard e.g. First Class ($3.50)</string>
    <string name="shipping_method_priority">Priority e.g. Fedex 2 Day ($7.00)</string>
    <string name="shipping_method_one_day">One-Day e.g. USPS Express ($18.61)</string>
    <string name="shipping_review_bottom_description">paypal bottom image</string>
    <string name="ship_to">ship to</string>
    <string name="text_sheet">20 per sheet (qty 1)</string>
    <string name="text_post_card">Post Card</string>
    <string name="done">Done</string>
    <string name="subtotal">subtotal</string>
    <string name="shipping">shipping</string>
    <string name="tax">tax</string>
    <string name="total">total</string>
    <string name="secure_aes_256_encrypted_payment">Secure AES-256 Encrypted Payment</string>
    <string name="credit_card_info">credit/debit card info</string>
    <string name="billing_address">billing address</string>
    <string name="same_as_shipping_address">Same as shipping address</string>
    <string name="getting_cards">getting cards</string>
    <string name="cards">cards</string>
    <string name="postage_stamps">postage stamps</string>
    <string name="postage">postage</string>
    <string name="view_cart">view cart</string>
    <string name="is_it_real_postage">is it real postage?</string>
    <string name="copy_coupon_code">copy coupon code</string>
    <string name="get">get</string>
    <string name="off">off</string>
    <string name="code">code:</string>
    <string name="july">July</string>
    <string name="cancel">Cancel</string>
    <string name="to_get_your_coupon">to get your coupon</string>
    <string name="share_on_facebook">Share on Facebook</string>
    <string name="or">or</string>
    <string name="share_on_twitter">Share on Twitter</string>
    <string name="about">About</string>
    <string name="about_1">is it real postage?</string>
    <string name="about_2">More FAQ</string>
    <string name="about_3">Contact Support</string>
    <string name="about_4">Wibesite</string>
    <string name="about_5">Terms of Service</string>
    <string name="about_6">Privacy Policy</string>
    <string name="about_7">Shipping $ Return Policy</string>
    <string name="about_8">Rate us on App Store</string>
    <string name="about_9">Clear Data and Cache</string>
    <string name="about_10">Version</string>
</resources>