<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/header"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="#282828"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/header_previous"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/header_previous"
        android:src="@drawable/btn_back" />

    <TextView
        android:id="@+id/header_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/customize_title"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/header_button"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/next"
        android:visibility="invisible" />

</LinearLayout>