<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#E1E1E1"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/shop_add_more"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@drawable/shop_additem_background"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/shop_add_more_view"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/icon_add" />

        <TextView
            android:id="@+id/shop_add_more_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/shop_cartitems_addmore"
            android:textAllCaps="true"
            android:textColor="#7fb80e"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_marginTop="15dip"
        android:background="@color/white"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/icon_offer" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/shop_cartitems_coupon"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/shop_cartitems_coupon"
            style="@style/paypal_edittext_style"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
         >

        <TextView
            android:id="@+id/shop_cartitems_getcoupon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dip"
            android:gravity="center"
            android:text="@string/shop_cartitems_getcoupon"
            android:textColor="#f58220"
            android:textSize="16sp" />
        <View
            android:id="@+id/coupon_line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/line_shape"
            />
    </LinearLayout>

</LinearLayout>